--- a/index.html
+++ b/index.html
@@ -2,7 +2,220 @@
 <html lang="es">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/><!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Unique Experiences</title>
+  <link rel="icon" href="./assets/img/icon.png" />
+  <link rel="stylesheet" href="./assets/css/styles.css?v=8" />
+  <script defer src="./assets/js/main.js?v=8"></script>
+</head>
+<body data-lang="es">
+  <!-- Header -->
+  <header class="site-header">
+    <div class="header-inner wrap">
+      <a class="brand" href="index.html" aria-label="Unique Home">
+        <img class="brand-icon" src="./assets/img/icon.png" alt="" />
+        <span>Unique</span>
+      </a>
+
+      <nav class="top-nav">
+        <a class="nav-link" href="about.html">Quiénes somos</a>
+        <a class="nav-link" href="personaliza.html">Personaliza tu viaje</a>
+        <a class="nav-link" href="#">Ayuda 24/7</a>
+
+        <!-- Idioma -->
+        <div class="dropdown">
+          <button class="nav-pill" id="langBtn">
+            <span class="flag-svg es"></span>
+            <span>ES</span>
+          </button>
+          <ul class="dropdown-menu right">
+            <li><button class="lang-opt" data-lang="es"><span class="flag-svg es"></span> ES (Español)</button></li>
+            <li><button class="lang-opt" data-lang="en"><span class="flag-svg en"></span> EN (English)</button></li>
+          </ul>
+        </div>
+
+        <!-- Cuenta -->
+        <div class="dropdown">
+          <button class="nav-pill" aria-haspopup="menu" aria-expanded="false">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-5 0-8 2.5-8 5v1h16v-1c0-2.5-3-5-8-5Z" fill="#10152b"/></svg>
+            <span class="hide-sm">Cuenta</span>
+          </button>
+          <ul class="dropdown-menu right">
+            <li><a href="#">Iniciar sesión</a></li>
+            <li><a href="#">Crear cuenta</a></li>
+          </ul>
+        </div>
+
+        <a class="nav-link cart-link" href="#"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M7 4H3v2h2l2.6 9.59A2 2 0 0 0 9.52 18H19v-2H9.54l-.25-.9L19 13l2-8H6.42L6 3H2v2h3ZM7 20a2 2 0 1 0 2 2 2 2 0 0 0-2-2Zm10 0a2 2 0 1 0 2 2 2 2 0 0 0-2-2Z" fill="#10152b"/></svg> <span>Carrito <b>0</b></span></a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO vídeo full screen -->
+  <section class="hero full-bleed">
+    <video class="hero-video" src="./assets/img/video_home_mallorca_30_sec.mp4" autoplay muted loop playsinline poster="./assets/img/veleros-mallorca.jpg"></video>
+    <div class="hero-overlay">
+      <!-- Searchbar estilo Exotica (anchos fijos) -->
+      <form class="searchbar" onsubmit="goPersonaliza(event)">
+        <!-- DESTINO -->
+        <div class="field has-suggest" data-keepopen>
+          <input id="destInput" type="text" placeholder="¿A dónde quieres viajar?" autocomplete="off" readonly />
+          <div class="mega suggest" id="destMega">
+            <div class="lvl1" id="destLvl1"></div>
+            <div class="lvl2" id="destLvl2"></div>
+          </div>
+        </div>
+
+        <!-- FECHAS (doble mes, rango) -->
+        <div class="field" data-keepopen>
+          <input id="dateInput" type="text" placeholder="¿Cuándo?" autocomplete="off" readonly />
+          <div class="calendar" id="calendar"></div>
+        </div>
+
+        <!-- TEMÁTICA -->
+        <div class="field" data-keepopen>
+          <button type="button" id="themeSel" class="select">Cualquier temática</button>
+          <ul class="select-menu" id="themeMenu"></ul>
+        </div>
+
+        <!-- GUESTS -->
+        <div class="field guests" data-keepopen>
+          <button type="button" id="guestsBtn" class="select"><svg width="16" height="16" viewBox="0 0 24 24" fill="#10152b"><path d="M16 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4Zm-8 0a3 3 0 1 0-3-3 3 3 0 0 0 3 3Zm8 2c-3.33 0-10 1.67-10 5v2h20v-2c0-3.33-6.67-5-10-5Zm-8 1c-2.67 0-8 1.33-8 4v2h8Z"/></svg> <span id="guestsLabel">2</span></button>
+          <div class="popover" id="guestsPop">
+            <div class="row"><strong>Adultos</strong><div class="qty"><button class="minus" data-target="adults">−</button><input id="adults" type="text" value="2" /><button class="plus" data-target="adults">+</button></div></div>
+            <div class="row"><span>Menos de 12</span><div class="qty"><button class="minus" data-target="kids">−</button><input id="kids" type="text" value="0" /><button class="plus" data-target="kids">+</button></div></div>
+            <div class="row"><span>Menos de 2</span><div class="qty"><button class="minus" data-target="babies">−</button><input id="babies" type="text" value="0" /><button class="plus" data-target="babies">+</button></div></div>
+            <div class="act"><button id="guestsOk" type="button">Confirmar</button></div>
+          </div>
+        </div>
+
+        <button class="btn primary" type="submit">Buscar</button>
+      </form>
+
+      <img class="hero-logo" src="./assets/img/logo.png" alt="Unique Experiences" />
+    </div>
+  </section>
+
+  <!-- ACTIVIDADES RECOMENDADAS (carrusel ancho completo, fondo beige) -->
+  <section class="section wide bg-beige">
+    <div class="section-head">
+      <h2>Actividades recomendadas</h2>
+    </div>
+    <div class="carousel">
+      <button class="car-arrow left" aria-label="prev">‹</button>
+      <div class="car-track" id="carActivities">
+        <!-- Cards generadas por JS con las 11 actividades -->
+      </div>
+      <button class="car-arrow right" aria-label="next">›</button>
+    </div>
+  </section>
+
+  <!-- TEMÁTICAS DE ACTIVIDADES (carrusel, fondo brand) -->
+  <section class="section wide bg-brand">
+    <div class="section-head light">
+      <h2>Temáticas de actividades</h2>
+    </div>
+    <div class="carousel">
+      <button class="car-arrow left" aria-label="prev">‹</button>
+      <div class="car-track" id="carThemes">
+        <!-- Temáticas generadas por JS -->
+      </div>
+      <button class="car-arrow right" aria-label="next">›</button>
+    </div>
+  </section>
+
+  <!-- DESTINOS (carrusel, fondo beige) -->
+  <section class="section wide bg-beige">
+    <div class="section-head">
+      <h2>Destinos</h2>
+    </div>
+    <div class="carousel">
+      <button class="car-arrow left" aria-label="prev">‹</button>
+      <div class="car-track" id="carDestinos">
+        <!-- Destinos generados por JS -->
+      </div>
+      <button class="car-arrow right" aria-label="next">›</button>
+    </div>
+  </section>
+
+  <!-- HOTELES DESTACADOS / ESTILOS (carrusel, fondo brand) -->
+  <section class="section wide bg-brand">
+    <div class="section-head light">
+      <h2>Estilos de hoteles</h2>
+    </div>
+    <div class="carousel">
+      <button class="car-arrow left" aria-label="prev">‹</button>
+      <div class="car-track" id="carHotels">
+        <!-- Estilos generados por JS -->
+      </div>
+      <button class="car-arrow right" aria-label="next">›</button>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="footer-grid wrap">
+      <div>
+        <h4>Contacto</h4>
+        <ul>
+          <li><strong>Email:</strong> <a href="mailto:info@experiencesunique.com">info@experiencesunique.com</a></li>
+          <li>
+            <strong>ES:</strong> +34 685 043 871
+            <a class="wa-inline" href="https://wa.me/34685043871" target="_blank" aria-label="WhatsApp ES">
+              <!-- WhatsApp SVG -->
+              <svg width="18" height="18" viewBox="0 0 32 32" fill="none"><path fill="#25D366" d="M16 3C9.37 3 4 8.37 4 15c0 2.22.6 4.3 1.66 6.08L4 29l8.11-1.6A11.93 11.93 0 0 0 16 27c6.63 0 12-5.37 12-12S22.63 3 16 3Z"/><path fill="#fff" d="M22.58 19.82c-.34.96-1.98 1.83-2.77 1.86-.79.03-1.77.5-5.96-1.97-3.98-2.33-6.09-6.75-6.28-7.06-.19-.31-1.5-2.11-1.44-4.04.06-1.93 1.12-2.89 1.49-3.05.37-.16.82-.23 1.08-.2.26.03.83-.15 1.28 1.01.45 1.16 1.53 3.98 1.67 4.27.14.29.23.63.04 1-.19.37-.89 1.26-1.09 1.5-.2.24-.22.42-.04.74.18.32.8 1.33 1.73 2.2 1.19 1.12 2.19 1.48 2.51 1.66.32.18.51.16.7-.05.19-.21.8-.93 1.02-1.25.22-.32.45-.26.74-.15.29.11 4.59 2.16 4.59 2.16s.38.14.24.5Z"/></svg>
+            </a>
+          </li>
+          <li><strong>UK:</strong> +44 (0) 7511 356928</li>
+        </ul>
+
+        <form class="contact">
+          <input type="email" placeholder="Tu email para novedades" />
+          <button class="btn primary" type="button">Suscribirme</button>
+        </form>
+        <ul>
+          <li><a href="#">Chat</a></li>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">FAQs</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h4>Inspiración</h4>
+        <ul>
+          <li><a href="#">Hoteles</a></li>
+          <li><a href="#">Destinos</a></li>
+          <li><a href="#">Experiencias</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h4>Unique</h4>
+        <ul>
+          <li><a href="about.html">Quiénes somos</a></li>
+          <li><a href="#">Preguntas frecuentes</a></li>
+          <li><a href="#">Regala Unique</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="#">Condiciones</a></li>
+          <li><a href="#">Privacidad</a></li>
+          <li><a href="#">Cookies</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="bottom wrap">© <span id="year"></span> Unique Experiences</div>
+  </footer>
+</body>
+</html>
+
   <title>Unique — Experiences</title>
 
   <link rel="icon" type="image/png" href="./assets/img/icon.png"/>
