--- a/index.html
+++ b/index.html
@@ -126,22 +126,17 @@
       <div class="carousel" data-name="acts">
         <button class="car-arrow left" aria-label="Anterior">‹</button>
         <div class="car-track">
-          <!-- 11 actividades, incluí “jet-ski” para Moto acuática -->
-          <article class="vcard">
-            <img src="./assets/img/jet-ski.jpg" alt="Moto acuática" />
-            <div class="pad"><strong>Moto acuática</strong></div>
-          </article>
-          <article class="vcard"><img src="./assets/img/Snorquel.jpg" alt="Snórquel"/><div class="pad"><strong>Snórquel</strong></div></article>
-          <article class="vcard"><img src="./assets/img/Globo.jpg" alt="Globo"/><div class="pad"><strong>Globo</strong></div></article>
-          <article class="vcard"><img src="./assets/img/Bodega.jpg" alt="Bodega"/><div class="pad"><strong>Bodega</strong></div></article>
+          <article class="vcard"><img src="./assets/img/globo-segovia.webp" alt="Globo"/><div class="pad"><strong>Vuelo en globo</strong></div></article>
+          <article class="vcard"><img src="./assets/img/Bodega.jpg" alt="Bodega"/><div class="pad"><strong>Visita a bodega</strong></div></article>
           <article class="vcard"><img src="./assets/img/delfines.jpg" alt="Avistamiento de cetáceos"/><div class="pad"><strong>Avistamiento de cetáceos</strong></div></article>
-          <article class="vcard"><img src="./assets/img/tablao-flamenco.jpg" alt="Tablao flamenco"/><div class="pad"><strong>Tablao flamenco</strong></div></article>
-          <article class="vcard"><img src="./assets/img/spa.jpg" alt="Spa"/><div class="pad"><strong>Spa</strong></div></article>
+          <article class="vcard"><img src="./assets/img/flamenca-castanuelas.jpg" alt="Tablao flamenco"/><div class="pad"><strong>Tablao flamenco</strong></div></article>
+          <article class="vcard"><img src="./assets/img/spa.webp" alt="Spa"/><div class="pad"><strong>Spa</strong></div></article>
           <article class="vcard"><img src="./assets/img/yoga.jpg" alt="Yoga"/><div class="pad"><strong>Yoga</strong></div></article>
-          <article class="vcard"><img src="./assets/img/caballo.jpg" alt="Paseo a caballo"/><div class="pad"><strong>Paseo a caballo</strong></div></article>
-          <article class="vcard"><img src="./assets/img/navegacion-yate.jpg" alt="Navegación en yate"/><div class="pad"><strong>Navegación en yate</strong></div></article>
-          <article class="vcard"><img src="./assets/img/paddle-surf.jpg" alt="Paddle surf"/><div class="pad"><strong>Paddle surf</strong></div></article>
-        </div>
+          <article class="vcard"><img src="./assets/img/caballos-playa.jpg" alt="Paseo a caballo"/><div class="pad"><strong>Paseo a caballo</strong></div></article>
+          <article class="vcard"><img src="./assets/img/navegacion-lago-mallorca.jpg" alt="Navegación en yate"/><div class="pad"><strong>Navegación en yate</strong></div></article>
+          <article class="vcard"><img src="./assets/img/paddle surf.jpg" alt="Paddle surf"/><div class="pad"><strong>Paddle surf</strong></div></article></div>
+        <article class="vcard"><img src="./assets/img/jet-ski.jpg" alt="Moto acuática" /><div class="pad"><strong>Moto acuática</strong></div></article>
+          <article class="vcard"><img src="./assets/img/Snorquel.jpg" alt="Snórquel"/><div class="pad"><strong>Snórquel</strong></div></article>
         <button class="car-arrow right" aria-label="Siguiente">›</button>
       </div>
     </div>
