--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <article class="vcard"><img src="./assets/img/caballos-playa.jpg" alt="Paseo a caballo"/><div class="pad"><strong>Paseo a caballo</strong></div></article>
           <article class="vcard"><img src="./assets/img/paddle surf.jpg" alt="Paddle surf"/><div class="pad"><strong>Paddle surf</strong></div></article>
           <article class="vcard"><img src="./assets/img/jet-ski.jpg" alt="Moto acuática" /><div class="pad"><strong>Moto acuática</strong></div></article>
-          <article class="vcard"><img src="./assets/img/Snorquel.webp" alt="Snórquel"/><div class="pad"><strong>Snórquel</strong></div></article>
+          <article class="vcard"><img src="./assets/img/snorquel.webp" alt="Snórquel"/><div class="pad"><strong>Snórquel</strong></div></article>
         <button class="car-arrow right" aria-label="Siguiente">›</button>
       </div>
     </div>
