--- a/about.html
+++ b/about.html
@@ -1,1 +1,183 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Unique — About us</title>
+  <link rel="icon" href="./assets/img/icon.png" />
+  <link rel="stylesheet" href="./assets/css/styles.css?v=8" />
+  <meta name="description" content="About us — Unique Experiences. Conoce a los fundadores, nuestra misión y cómo diseñamos viajes a medida." />
+  <script defer src="./assets/js/main.js?v=8"></script>
+</head>
+<body>
+
+  <!-- Header -->
+  <header class="site-header">
+    <div class="wrap header-inner">
+      <a class="brand" href="./index.html">
+        <img class="brand-icon" src="./assets/img/icon.png" alt="Unique" />
+        <span>Unique</span>
+      </a>
+
+      <nav class="top-nav">
+        <a class="nav-link" href="./about.html" aria-current="page">About us</a>
+        <a class="nav-link" href="./personaliza.html">Personaliza tu viaje</a>
+        <a class="nav-link" href="#">Ayuda 24/7</a>
+
+        <div class="dropdown">
+          <button class="nav-pill">
+            <span class="flag es" aria-hidden="true"></span><span>ES</span>
+          </button>
+          <ul class="dropdown-menu right">
+            <li><button type="button" class="lang-btn" data-lang="es"><span class="flag es"></span> ES (Español)</button></li>
+            <li><button type="button" class="lang-btn" data-lang="en"><span class="flag en"></span> EN (English)</button></li>
+          </ul>
+        </div>
+
+        <a class="nav-link" href="#" id="cartLink">🛒 <span>Carrito</span> <span id="cartQty">0</span></a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="section about-hero" data-bg="beige" style="padding:56px 0">
+    <div class="wrap">
+      <h1 style="margin:0 0 10px">About us</h1>
+      <p style="max-width:860px">
+        Somos <strong>Unique</strong>, una casa de experiencias a medida. Nacimos entre España y Londres
+        para conectar viajeros con anfitriones locales y diseñar itinerarios con criterio: claros, cuidados y sin fricción.
+      </p>
+    </div>
+  </section>
+
+  <!-- Propósito -->
+  <section class="section" data-bg="blue">
+    <div class="wrap">
+      <div class="about-grid-2">
+        <div>
+          <h2>Propósito</h2>
+          <p>
+            Hacer que cada viaje sea realmente <em>único</em>: centrado en lo que te gusta,
+            con proveedores verificados y un acompañamiento humano 24/7. Tecnología para lo
+            repetitivo; personas para lo importante.
+          </p>
+          <ul class="checklist">
+            <li>Diseño a medida y presupuestos transparentes</li>
+            <li>Red curada de partners locales</li>
+            <li>Soporte cercano antes, durante y después</li>
+          </ul>
+        </div>
+        <div>
+          <img class="about-img" src="./assets/img/team-collab.jpg" alt="Equipo Unique trabajando en itinerarios">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Fundadores -->
+  <section class="section" data-bg="beige">
+    <div class="wrap">
+      <h2>Founders</h2>
+      <div class="team-grid founders">
+        <article class="team-card">
+          <img src="./assets/img/Foto-Jaime-Postigo.jpg" alt="Jaime Postigo Camps">
+          <div class="pad">
+            <strong>Jaime Postigo Camps</strong><br>
+            <span class="muted">CEO & Co-founder</span>
+            <p class="bio">
+              Experiencia en banca de inversión, finanzas corporativas y M&amp;A.
+              Especialista en análisis y planificación financiera.
+              MBA IESE (2020). Ha vivido en Londres.
+            </p>
+          </div>
+        </article>
+
+        <article class="team-card">
+          <img src="./assets/img/Foto-Ramon-Borras.jpg" alt="Ramon Borras Yanez">
+          <div class="pad">
+            <strong>Ramon Borras Yanez</strong><br>
+            <span class="muted">Co-founder</span>
+            <p class="bio">
+              Experiencia en desarrollo de negocio, ventas y finanzas.
+              Fundador y ex-CEO de <em>Spaniard Barrels</em>. Ha vivido en Londres.
+            </p>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- Valores -->
+  <section class="section">
+    <div class="wrap">
+      <h2>Valores</h2>
+      <div class="about-cards">
+        <article class="about-card">
+          <h3>Curación</h3>
+          <p>Seleccionamos experiencias auténticas con estándares de calidad y seguridad.</p>
+        </article>
+        <article class="about-card">
+          <h3>Transparencia</h3>
+          <p>Presupuestos claros, sin letra pequeña. Comunicación directa.</p>
+        </article>
+        <article class="about-card">
+          <h3>Sostenibilidad</h3>
+          <p>Impulso al talento local y prácticas responsables en destino.</p>
+        </article>
+        <article class="about-card">
+          <h3>Servicio</h3>
+          <p>Acompañamiento humano 24/7. Estamos cuando hace falta.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="section" data-bg="blue">
+    <div class="wrap" style="text-align:center">
+      <h2>¿Empezamos a diseñar tu viaje?</h2>
+      <p>Cuéntanos qué te apetece y te preparamos una propuesta a medida.</p>
+      <a class="btn primary nav-pill" href="./personaliza.html">Personaliza tu viaje</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="wrap footer-grid">
+      <div>
+        <h4>Contacto</h4>
+        <p>Email: <a href="mailto:info@experiencesunique.com">info@experiencesunique.com</a></p>
+        <p>ES: +34 685 043 871 <a class="wa" href="https://web.whatsapp.com/send?phone=34685043871" target="_blank" rel="noopener" aria-label="WhatsApp">🟢</a></p>
+        <p>UK: +44 (0) 7511 356928</p>
+      </div>
+      <div>
+        <h4>Explora</h4>
+        <ul>
+          <li><a href="./index.html#sec-hotels">Hoteles</a></li>
+          <li><a href="./index.html#sec-dests">Destinos</a></li>
+          <li><a href="./index.html#sec-acts">Experiencias</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Unique</h4>
+        <ul>
+          <li><a href="./about.html" aria-current="page">About us</a></li>
+          <li><a href="#">Preguntas frecuentes</a></li>
+          <li><a href="#">Regala Unique</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="#">Condiciones</a></li>
+          <li><a href="#">Privacidad</a></li>
+          <li><a href="#">Cookies</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="bottom">© <span id="year"></span> Unique Experiences</div>
+  </footer>
+
+</body>
+</html>
 
