--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
 
       <nav class="top-nav">
-        <a class="nav-link" href="./quienes.html" data-i18n="nav_about">Quiénes somos</a>
+        <a class="nav-link" href="./about.html" data-i18n="nav_about">Quiénes somos</a>
         <a class="nav-link" href="./personaliza.html" data-i18n="nav_customize">Personaliza tu viaje</a>
         <a class="nav-link" href="#" data-i18n="nav_help">Ayuda 24/7</a>
 
