--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </form>
 
       <!-- Logo -->
-      <img class="hero-logo" src="./assets/img/Logo.png" alt="Unique Experiences" />
+      <img class="hero-logo" src="./assets/img/logo.png" alt="Unique Experiences" />
     </div>
   </section>
 
