--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <div>
         <h4>Unique</h4>
         <ul>
-          <li><a href="./quienes.html">Quiénes somos</a></li>
+          <li><a href="./about.html">Quiénes somos</a></li>
           <li><a href="#">Preguntas frecuentes</a></li>
           <li><a href="#">Regala Unique</a></li>
         </ul>
